[tool.poetry]
name = "pretty-confusion-matrix"
version = "0.1.1"
description = "plot a pretty confusion matrix (like Matlab) in python using seaborn and matplotlib"
repository = "https://github.com/wcipriano/pretty-print-confusion-matrix"
authors = ["Khuyen Tran <khuyentran1476@gmail.com>"]
keywords = ["confusion matrix"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
